examples/kubernetes/tracing/jaeger-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jaeger.127.0.0.1.nip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: simplest-query
          port: 16686
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    - match: Host(`jaeger.127.0.0.1.nip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: simplest-query
          port: 16686
